--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,9 +4,26 @@
 }
 
 body{
-	background-color: #F5F8FA;
-	color: #636b6f;
+	background-color: #F2F2F0;
+	color: #333;
 	font-family: libreFranklin;
+}
+h1, h2, h3, h4, h5{
+	color: #333;
+}
+
+.nav-header{
+	margin: 18px;
+	color: #ABAAA8;
+}
+
+.wrapper{
+	padding-top: 64px;
+}
+
+
+.container-fluid h1, .container-fluid h2, .container-fluid h3, .container-fluid h4{
+	margin: 10px 0;
 }
 
 .main-content{
@@ -33,9 +50,192 @@ body{
 }
 .circle{
 	border-radius: 50%;
+	border: 2px solid #dbdcdb;
+	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
 
 img.responsive-img{
 	max-width: 100%;
 	height: auto;
 }
+
+.card{
+	border: 1px solid #dbdcdb;
+	border-radius: 4px;
+	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+	padding: 20px;
+	background-color: #F2F2EA;
+}
+.card .card-header{
+	color: #333;
+	border-bottom: 1px solid #dbdcdb;
+	text-align: center;
+	padding: 0 0 5px 0;
+	margin-bottom: 15px; 
+}
+
+.btn-block{
+	width: 100%;
+}
+
+
+.tree{
+	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+	height: 50px;
+	background-color: #F7F6F2;
+	border-bottom: 1px solid #dbdcdb;
+	padding: 15px;
+}
+
+
+
+
+/*color pallete*/
+.white{
+	background-color: #FFF;
+}
+.white-txt{
+	color: #FFF;
+}
+
+.tautara{
+	background-color: #373737;
+}
+.tautara-txt{
+	color: #373737;
+}
+.isabelline{
+	background-color: #F2F2EA;
+}
+.isabelline-txt{
+	color: #F2F2EA;
+}
+
+.dovegray{
+	background-color: #737371;
+}
+.dovegray-txt{
+	color: #737371;
+}
+.roman{
+	background-color: #DE6262;
+}
+.roman-txt{
+	color: #DE6262;
+}
+button.roman:hover{
+	background-color: #D36262;
+	color: #fff;
+}
+a.roman-txt:hover{
+	text-decoration: none;
+	color: #D36262;
+}
+
+.springwood{
+	background-color: #F7F6F2;
+}
+.springwood-txt{
+	color: #F7F6F2;
+}
+
+.seashell{
+	background-color: #F2F2F0;
+}
+.seashell-txt{
+	color: #F2F2F0;
+}
+
+/*style custom datatables*/
+table.dataTable thead th, table.dataTable thead td {
+	padding: 10px 18px;
+	border-bottom: 1px solid #ABAAA8;
+}
+table.dataTable.no-footer {
+	border-bottom: 1px solid #ABAAA8;
+}
+
+.dataTables_wrapper .dataTables_filter input {
+	display: block;
+	width: 100%;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.dataTables_wrapper .dataTables_filter input:focus {
+	border-color: #66afe9;
+	outline: 0;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+	border: 1px solid #dbdcdb;
+	border-radius: 4px;
+	
+	background-color: #D36262;
+	color: #F2F2EA;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
+	color: #F2F2EA !important;
+	border: 1px solid #dbdcdb;
+	background: #D36262;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+	color: #ABAAA8 !important;
+	border: 1px solid #dbdcdb;
+	background: #F2F2EA;
+
+}
+
+.dataTables.min.css:1
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+	color: #ABAAA8 !important;
+	border: 1px solid #dbdcdb;
+	background: #F2F2EA;
+
+}
+
+.dataTables.min.css:1
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+	box-sizing: border-box;
+	display: inline-block;
+	min-width: 1.5em;
+	padding: 0.5em 1em;
+	margin-left: 2px;
+	text-align: center;
+	text-decoration: none !important;
+	cursor: pointer;
+	color: #333 !important;
+	border: 1px solid transparent;
+	border-radius: 2px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
