--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,6 +147,10 @@ a.roman-txt:hover{
 }
 
 /*style custom datatables*/
+.dttable{
+	display: none;
+}
+
 table.dataTable thead th, table.dataTable thead td {
 	padding: 10px 18px;
 	border-bottom: 1px solid #ABAAA8;
